//===----------------------------------------------------------------------===//
//
// This source file is part of the Swift Distributed Actors open source project
//
// Copyright (c) 2019 Apple Inc. and the Swift Distributed Actors project authors
// Licensed under Apache License v2.0
//
// See LICENSE.txt for license information
// See CONTRIBUTORS.md for the list of Swift Distributed Actors project authors
//
// SPDX-License-Identifier: Apache-2.0
//
//===----------------------------------------------------------------------===//

syntax = "proto3";

option optimize_for = SPEED;
option swift_prefix = "Proto";

import "Clocks/VersionVector.proto";

// ==== Common and Core CRDT parts -------------------------------------------------------------------------------------

// ===== CRDT.Identity =====

message CRDTIdentity {
    string id = 1;
}

// ===== Versioned Container =====

message CRDTVersionedContainer {
    VersionReplicaId replicaId = 1;
    CRDTVersionContext versionContext = 2;
    repeated VersionDottedElementEnvelope elementByBirthDot = 3;
    CRDTVersionedContainerDelta delta = 4;
}

message CRDTVersionContext {
    VersionVector versionVector = 1;
    repeated VersionDot gaps = 2;
}

message CRDTVersionedContainerDelta {
    CRDTVersionContext versionContext = 1;
    repeated VersionDottedElementEnvelope elementByBirthDot = 2;
}

// ==== CRDT types -----------------------------------------------------------------------------------------------------

// ===== CRDT.GCounter =====

message CRDTGCounter {
    message ReplicaState {
        VersionReplicaId replicaId = 1;
        uint64 count = 2;
    }

    message Delta {
        repeated ReplicaState state = 1;
    }

    VersionReplicaId replicaId = 1;
    // Not a map because only integral or string type can be keys
    repeated ReplicaState state = 2;
    Delta delta = 3;
}

// ===== CRDT.ORSet =====

message CRDTORSet {
    VersionReplicaId replicaId = 1;
    CRDTVersionedContainer state = 2;
}
